add restaurant pay order function
